2007-09-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): On log scale plots with very large range,
	the minitic interval can overflow integer representation.
	Bug #1797500

	* term/gd.trm (PNG_image): gdImageGetClip was introduced in libgd
	version 2.0.12.  Don't try to use it if GD2_VERS is less than 2.
	Bug #1790171

2007-09-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.h src/datafile.c: make df_eof static rather than global.
	* src/plot3d.c (eval_3dplots get_3ddata): Track return code from df_readline
	directly rather than relying on a global df_eof that mirrors it.

2007-08-31  Ethan Merritt  <merritt@u.washington.edu>

	Version 2.9.? of Octave switched to piping all data to gnuplot in-line
	rather than via a temporary file.  This broke mouse zooming and replot.

	This patchset is an imperfect fix with several known problems:
	- Clipping of zoomed 3D contour plots is not correct.
	- splot volatile with image + zoom + unzoom is flaky
	- plot -> zoom -> set grid -> unzoom   loses the grid setting.
	- you cannot toggle log scaling on/off while using refresh.

	Introduce a new command "refresh" that acts like replot except that it
	does not re-read the input data.  Refresh is always needed in order to
	zoom or replot in-line data (input file '-'), but may optionally applied
	to normal data files also by appending the attribute 'volatile'.

	* src/plot2d.c (eval_plots): This is the core change. Instead of 
	freeing stored data after each plot, keep it around in case of a
	refresh command. The old data storage is freed at the start of the next
	"plot" or "replot" command.  This is parallel to what the 3D code was
	already doing. Set refresh_ok = 2  at the end of a successful plot.

	* src/plot3d.c (eval_3dplots): Update comments and remove dead code.
	Set refresh_ok = 3  at the end of a successful plot.

	* src/plot2d.c (refresh_bounds) src/plot2d.h
	* src/plot3d.c (refresh_3dbounds) src/plot3d.h: