@@ -1,3 +1,12 @@
+2007-09-24  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/mouse.c (do_save_3dplot): If the log scale setting has changed
+	for any axis, we must do a full replot rather than a shortcut during
+	mouse-driven rotation.  This is equivalent to the replot instead of
+	refresh code used for zooming, so we can use the same flag (refresh_ok)
+	to test for it.
+	Bug #1797500
+
 2007-09-23  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/axis.c (gen_tics): On log scale plots with very large range,
